--- a/package.json
+++ b/package.json
@@ -18,9 +18,15 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@fortawesome/angular-fontawesome": "^1.0.0",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "apexcharts": "^4.5.0",
+    "bootstrap": "^5.3.3",
     "jwt-decode": "^4.0.0",
+    "ng-apexcharts": "^1.15.0",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.8.1",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
