--- a/package.json
+++ b/package.json
@@ -20,11 +20,16 @@
     "@angular/router": "^17.3.0",
     "@fortawesome/angular-fontawesome": "^1.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@types/jquery": "^3.5.32",
     "apexcharts": "^4.5.0",
     "bootstrap": "^5.3.3",
+    "boxicons": "^2.1.4",
+    "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "ng-apexcharts": "^1.15.0",
+    "ngx-owl-carousel-o": "^19.0.0",
     "ngx-toastr": "^19.0.0",
+    "owl.carousel": "^2.3.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.8.1",
     "zone.js": "~0.14.3"
