--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "^17.3.0",
     "@fortawesome/angular-fontawesome": "^1.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@ng-bootstrap/ng-bootstrap": "^18.0.0",
+    "@popperjs/core": "^2.11.8",
     "@types/jquery": "^3.5.32",
     "apexcharts": "^4.5.0",
     "bootstrap": "^5.3.3",
